Update sul commit precedente
modifiche in Controller e Base64ImageRenderer